bubba-frontend (2.1.11) vincent hugo; urgency=low

  * Fixed wizard to auto start in with language selection. (Closes: #1573)

 -- PA Nilsson <pa@excito.com>  Thu, 21 Oct 2010 15:05:31 +0200

bubba-frontend (2.1.10) lucid; urgency=low

  * Updated some german help texts 

 -- PA Nilsson <pa@excito.com>  Thu, 14 Oct 2010 10:46:37 +0200

bubba-frontend (2.1.9) vincent hugo; urgency=low

  * Update for easyfind server error message

 -- PA Nilsson <pa@excito.com>  Wed, 06 Oct 2010 12:14:13 +0200

bubba-frontend (2.1.8) vincent hugo; urgency=low

  * Link to quickstart includes language setting

 -- PA Nilsson <pa@excito.com>  Wed, 06 Oct 2010 09:59:28 +0200

bubba-frontend (2.1.7) vincent hugo; urgency=low

  * Updates needed for language support in album
  * Text updates

 -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 16:22:06 +0200

bubba-frontend (2.1.6) vincent hugo; urgency=low

  * Upload to correct repos

 -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 12:02:31 +0200

bubba-frontend (2.1.5) lucid; urgency=low

  * Added support for easyfind-pdns
  * Added german language files 

 -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 12:01:43 +0200

bubba-frontend (2.1.4) vincent hugo; urgency=low

  * Initial work on multiple language support
  * Possibility to add user defined languages. 
  * Select default language in first wizard page. 
  * Moved language selection to seperate wizard page. 
  * Added possibility for user to select system default lang. 
  * 

 -- PA Nilsson <pa@excito.com>  Tue, 28 Sep 2010 14:04:23 +0200

bubba-frontend (2.1.3) vincent hugo; urgency=low

  * Increase timeout on backup/restore settings.

 -- Tor Krill <tor@excito.com>  Sun, 12 Sep 2010 23:28:55 +0200

bubba-frontend (2.1.2) vincent hugo; urgency=low

  * Don't error if print info fields are missing 

 -- Tor Krill <tor@excito.com>  Thu, 09 Sep 2010 17:44:38 +0200

bubba-frontend (2.1.1) hugo vincent; urgency=low

  * Added missing image
