@@ -1,8 +1,9 @@
 bubba-frontend (2.1.11) vincent hugo; urgency=low
 
   * Fixed wizard to auto start in with language selection. (Closes: #1573)
+  * Fixed php error in easyfind section of wizard. (Closes: #1575) 
 
- -- PA Nilsson <pa@excito.com>  Thu, 21 Oct 2010 15:05:31 +0200
+ -- PA Nilsson <pa@excito.com>  Thu, 21 Oct 2010 15:32:56 +0200
 
 bubba-frontend (2.1.10) lucid; urgency=low
 
